--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>D3 Course</title>
-    <link rel="stylesheet" href="main.css">
+    <title>D3 Course HW-01</title>
 </head>
 <body>
 關&nbsp;&nbsp;關&nbsp;&nbsp;雎&nbsp;&nbsp;鳩<br>
